--- a/DMSite/Content/Site.css
+++ b/DMSite/Content/Site.css
@@ -1,19 +1,125 @@
 ﻿body {
-    padding-top: 50px;
-    padding-bottom: 20px;
+    margin: 0;
+    padding: 0;
 }
 
+
+
+.footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 10%;
+    background-color:black;
+    color: lawngreen;
+    text-align: center;
+    z-index:100;
+}
+
+.divBorder {
+    width: 85% !important;
+    height: auto;
+    margin-bottom:200px;
+    margin-top:75px;
+    position: relative;
+    border-width: 3px;
+    border-style: ridge;
+    border-color: lawngreen;
+    border-radius: 25px;
+    background-color: black;
+    z-index:3;
+}
+
+.HeaderBorder {
+    border-width: 3px;
+    border-style: ridge;
+    border-color: lawngreen;
+    clear: both;
+    margin-top: 20px;
+    border-radius: 25px;
+    width:80%;
+    
+}
+
+
+.ImageBorder {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  
+    max-width: 50%;
+    width: 50%;
+    min-width: 260px;
+    height: auto;
+    border-width: 3px;
+    border-style: ridge;
+    border-color: lawngreen;
+    height: auto !important;
+    background-color: black;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    z-index: 4;
+    border-radius: 25px;
+}
+
+.TextBorder {
+    border-width: 3px;
+    border-style: ridge;
+    border-color: lawngreen;
+    height: auto;
+    width: 70%;
+    font-size: 2vw;
+
+    min-width: 100px;
+   float:right;
+    
+    z-index: 5;
+    background-color: black;
+    color: lawngreen;
+    margin-top: 50px;
+
+    border-radius: 25px;
+    padding: 15px;
+}
+
+
+
+.header h1 {
+    margin-top: 0;
+}
+
+.navbar, .navbar-inverse {
+    background-image: none;
+    background: #4cff00;
+    color: lawngreen;
+}
+.navbar-inverse {
+    background-color: black !important;
+    color:lawngreen;
+    margin: 0;
+    padding: 0;
+}
 /* Set padding to keep content from hitting the edges */
 .body-content {
     padding-left: 15px;
     padding-right: 15px;
+    margin: 0;
+   
 }
 
 /* Override the default bootstrap behavior where horizontal description lists 
    will truncate terms that are too long to fit in the left column 
 */
+
+header {
+    background-color: black;
+    margin: 0;
+    padding: 0;
+}
+
 .dl-horizontal dt {
-    white-space: normal;
+    white-space: pre-wrap;
 }
 
 /* Set width on the form input elements since they're 100% wide by default */
@@ -22,3 +128,16 @@ select,
 textarea {
     max-width: 280px;
 }
+a.my-class {
+    color: lawngreen;
+}
+
+    a.my-class:active {
+        color: darkgreen;
+    }
+
+    a.my-class:link {
+        color: lawngreen;
+    }
+
+  
