--- a/DMSite/Views/Home/About.cshtml
+++ b/DMSite/Views/Home/About.cshtml
@@ -2,6 +2,28 @@
     ViewBag.Title = "About";
 }
 <h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<div style ="color:Blue">@ViewBag.Message</div>
+
+Youre using @Request.Browser.Browser and thats okay
 
 <p>Use this area to provide additional information.</p>
+
+
+@{ var amounts = new List<decimal> { 100, 25.2m, -30, 1, -99 }; }
+
+<ul>
+    @foreach(var a in amounts)
+    {
+        <li>@formatAmount(a)</li>
+    }
+</ul>
+
+    @helper formatAmount(decimal amount)
+    {
+        var color = "green";
+        if(amount > 0)
+        {
+            color = "red";
+    }
+<span style="color:@color">@String.Format("{0:c}",amount)</span>
+}
