--- a/DMSite/Content/Site.css
+++ b/DMSite/Content/Site.css
@@ -83,8 +83,22 @@
     padding: 15px;
 }
 
+.TextBorderContact {
+    border-width: 3px;
+    border-style: ridge;
+    border-color: lawngreen;
+    height: auto;
+    width: 70%;
 
-
+    min-width: 100px;
+    z-index: 5;
+    background-color: black;
+    color: lawngreen;
+    margin-top: 50px;
+    margin-bottom: 150px;
+    border-radius: 25px;
+    padding: 15px;
+}
 .header h1 {
     margin-top: 0;
 }
