Adjustments for screen width
-Adding adjustments for screen width changes

--- a/DMSite/Views/Home/Index.cshtml
+++ b/DMSite/Views/Home/Index.cshtml
@@ -7,8 +7,8 @@
 
 
         <div>
-            <div class="TextBorder"style="position:absolute; max-width:500px; margin-top:165px">
-                Play with friends in Dead Metal's online multiplayer modes.
+            <div class="TextBorder" style="max-width:400px; margin-top:210px; margin-left:70px">
+                Play with friends in Dead Metal's online multiplayer modes.  Play with friends in Dead Metal's online multiplayer modes.  Play with friends in Dead Metal's online multiplayer modes.  Play with friends in Dead Metal's online multiplayer modes.  Play with friends in Dead Metal's online multiplayer modes.  Play with friends in Dead Metal's online multiplayer modes.
             </div>
             <img class="ImageBorder" src="~/Images/tweetmultiplayer.png" />
         </div>
@@ -16,8 +16,8 @@
 
 
         <div>
-            <div class="TextBorder" style="position:absolute; max-width:500px; margin-top:130px">
-                Play with friends in Dead Metal's online multiplayer modes.
+            <div class="TextBorder" style="max-width:400px; margin-top:150px; margin-right:70px; float:right">
+                Play with friends in Dead Metal's online multiplayer modes.  Play with friends in Dead Metal's online multiplayer modes.  Play with friends in Dead Metal's online multiplayer modes.  Play with friends in Dead Metal's online multiplayer modes.  Play with friends in Dead Metal's online multiplayer modes.
             </div>
 
             <img class="ImageBorder" src="~/Images/twootcat.png" />
@@ -26,8 +26,8 @@
 
 
         <div>
-            <div class="TextBorder"style="position:absolute; max-width:500px; margin-top:150px">
-                Play with friends in Dead Metal's online multiplayer modes.
+            <div class="TextBorder" style="max-width:400px; margin-top:200px; margin-left:70px">
+                Play with friends in Dead Metal's online multiplayer modes.  Play with friends in Dead Metal's online multiplayer modes.  Play with friends in Dead Metal's online multiplayer modes.
             </div>
             <img class="ImageBorder" src="~/Images/tweeeeet.png" />
           
