--- a/DMSite/Content/Site.css
+++ b/DMSite/Content/Site.css
@@ -18,7 +18,7 @@
 }
 
 .divBorder {
-    width: 85% !important;
+    width: 60% !important;
     height: auto;
     margin-bottom:200px;
     margin-top:75px;
@@ -63,23 +63,36 @@
     border-radius: 25px;
 }
 
+
+@media (max-width:1600px)
+{
+    .ImageBorder {
+        max-width: 90%;
+        min-width:90%;
+        border-color: red;
+    }
+    .TextBorder
+    {
+        margin:auto !important;
+    }
+}
+
 .TextBorder {
-    border-width: 3px;
-    border-style: ridge;
-    border-color: lawngreen;
+
     height: auto;
     width: 70%;
-    font-size: 2vw;
+    max-width:100px;
+    font-size: 16px;
 
     min-width: 100px;
-   float:right;
+   float:left;
     
     z-index: 5;
     background-color: black;
     color: lawngreen;
-    margin-top: 50px;
+    margin-top:1000px;
 
-    border-radius: 25px;
+   
     padding: 15px;
 }
 
