--- a/DMSite/Views/Home/Index.cshtml
+++ b/DMSite/Views/Home/Index.cshtml
@@ -3,11 +3,11 @@
 }
 <center>
     <div class="divBorder">
-
+        <link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
 
 
         <div>
-            <div class="TextBorder" style="max-width:400px; margin-top:210px; margin-left:70px">
+            <div class="TextBorder" style="max-width:400px; margin-top:210px; margin-left:70px; font-family:Orbitron">
                 Play with friends in Dead Metal's online multiplayer modes.  Play with friends in Dead Metal's online multiplayer modes.  Play with friends in Dead Metal's online multiplayer modes.  Play with friends in Dead Metal's online multiplayer modes.  Play with friends in Dead Metal's online multiplayer modes.  Play with friends in Dead Metal's online multiplayer modes.
             </div>
             <img class="ImageBorder" src="~/Images/tweetmultiplayer.png" />
@@ -16,7 +16,7 @@
 
 
         <div>
-            <div class="TextBorder" style="max-width:400px; margin-top:150px; margin-right:70px; float:right">
+            <div class="TextBorder" style="max-width:400px; margin-top:150px; margin-right:70px; float:right; font-family:Orbitron">
                 Play with friends in Dead Metal's online multiplayer modes.  Play with friends in Dead Metal's online multiplayer modes.  Play with friends in Dead Metal's online multiplayer modes.  Play with friends in Dead Metal's online multiplayer modes.  Play with friends in Dead Metal's online multiplayer modes.
             </div>
 
@@ -26,11 +26,11 @@
 
 
         <div>
-            <div class="TextBorder" style="max-width:400px; margin-top:200px; margin-left:70px">
+            <div class="TextBorder" style="max-width:400px; margin-top:200px; margin-left:70px; font-family:Orbitron">
                 Play with friends in Dead Metal's online multiplayer modes.  Play with friends in Dead Metal's online multiplayer modes.  Play with friends in Dead Metal's online multiplayer modes.
             </div>
             <img class="ImageBorder" src="~/Images/tweeeeet.png" />
-          
+
         </div>
     </div>
-    </center>
+</center>
