--- a/DMSite/Views/Shared/_Layout.cshtml
+++ b/DMSite/Views/Shared/_Layout.cshtml
@@ -13,25 +13,19 @@
 </head>
 
 <body style=" background-color: #181818; background-image: url('../../Images/darkback.png'); width:100%;">
-   
+    <link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
     <div style="background-color:black;color:lawngreen; height:25%; position:static"><center>  <img src="~/Images/deadmetal.png" class="HeaderBorder" /></center></div>
-    <div class="navbar navbar-inverse" style="background-color:black; color:lawngreen">
+    <div class="navbar navbar-collapse" style="background-color:black; color:lawngreen">
         <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-            
-            </div>
-            <div class="navbar-collapse collapse" style="color:lawngreen">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home", new { Style = "color:Green" })</li>
-                    <li>@Html.ActionLink("About", "About", "Home", new { Style = "color:Green" })</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home", new { Style = "color:Green" })</li>
+          
+            <div class="navbar-nav" style="color:lawngreen">
+           
+                <ul class="nav navbar-expand" >
+                    <li style="margin-right:40px; font-family:Orbitron">@Html.ActionLink("Home", "Index", "Home", new { Style = "color:Green" })</li>
+                    <li style="margin-right:40px; font-family:Orbitron">@Html.ActionLink("Features", "About", "Home", new { Style = "color:Green" })</li>
+                    <li style="margin-right:40px; font-family:Orbitron">@Html.ActionLink("Beta", "Contact", "Home", new { Style = "color:Green" })</li>
                 </ul>
-                @Html.Partial("_LoginPartial", new { Style = "color:Green" })
+          
             </div>
         </div>
     </div>
@@ -46,7 +40,7 @@
         <footer>
             &copy; @DateTime.Now.Year - MonotoneGamedev
         </footer>
-        
+
     </div>
 
 
