--- a/DMSite/Content/Site.css
+++ b/DMSite/Content/Site.css
@@ -3,14 +3,17 @@
     padding: 0;
 }
 
-
+@font-face {
+    font-family: "Orbitron";
+    src: url("https://fonts.googleapis.com/css?family=Orbitron");
+}
 
 .footer {
     position: fixed;
     left: 0;
     bottom: 0;
     width: 100%;
-    height: 10%;
+    height: 5%;
     background-color:black;
     color: lawngreen;
     text-align: center;
@@ -61,6 +64,10 @@
     margin-bottom: 50px;
     z-index: 4;
     border-radius: 25px;
+}
+
+li {
+    margin-left: 40px !important;
 }
 
 
