--- a/DMSite/Views/Home/Index.cshtml
+++ b/DMSite/Views/Home/Index.cshtml
@@ -1,5 +1,6 @@
-﻿@{
-    ViewBag.Title = "Home Page";
+﻿
+@{
+    ViewBag.Title = "DeadMetalSite";
 }
 <center>
     <div class="divBorder">
@@ -8,6 +9,7 @@
 
         <div>
             <div class="TextBorder" style="max-width:400px; margin-top:210px; margin-left:70px; font-family:Orbitron">
+                <h1 style="font-family:Orbitron; color:lawngreen; margin-top:8px">Create</h1>
                 Play with friends in Dead Metal's online multiplayer modes.  Play with friends in Dead Metal's online multiplayer modes.  Play with friends in Dead Metal's online multiplayer modes.  Play with friends in Dead Metal's online multiplayer modes.  Play with friends in Dead Metal's online multiplayer modes.  Play with friends in Dead Metal's online multiplayer modes.
             </div>
             <img class="ImageBorder" src="~/Images/tweetmultiplayer.png" />
@@ -17,6 +19,7 @@
 
         <div>
             <div class="TextBorder" style="max-width:400px; margin-top:150px; margin-right:70px; float:right; font-family:Orbitron">
+                <h1 style="font-family:Orbitron; color:lawngreen; margin-top:8px">Create</h1>
                 Play with friends in Dead Metal's online multiplayer modes.  Play with friends in Dead Metal's online multiplayer modes.  Play with friends in Dead Metal's online multiplayer modes.  Play with friends in Dead Metal's online multiplayer modes.  Play with friends in Dead Metal's online multiplayer modes.
             </div>
 
@@ -27,6 +30,7 @@
 
         <div>
             <div class="TextBorder" style="max-width:400px; margin-top:200px; margin-left:70px; font-family:Orbitron">
+                <h1 style="font-family:Orbitron; color:lawngreen; margin-top:8px">Create</h1>
                 Play with friends in Dead Metal's online multiplayer modes.  Play with friends in Dead Metal's online multiplayer modes.  Play with friends in Dead Metal's online multiplayer modes.
             </div>
             <img class="ImageBorder" src="~/Images/tweeeeet.png" />
