--- a/DMSite/Views/Home/About.cshtml
+++ b/DMSite/Views/Home/About.cshtml
@@ -1,5 +1,7 @@
 ﻿
-
+@{ 
+    ViewBag.Title = "DeadMetalSite";
+}
 <link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
 <center>
     <div class="divBorder">
