--- a/DMSite/Views/Shared/_Layout.cshtml
+++ b/DMSite/Views/Shared/_Layout.cshtml
@@ -1,14 +1,18 @@
 ﻿<!DOCTYPE html>
+
+@{
+    ViewBag.Title = "DeadMetalSite";
+}
 <html>
 <head>
-
+    <title>@ViewBag.Title</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><center>@ViewBag.Title - DEAD METAL </center></title>
     @Styles.Render("~/Content/css")
     @Styles.Render("~/Content/Site.css")
     @Scripts.Render("~/bundles/modernizr")
-  
+
 
 </head>
 
@@ -17,22 +21,22 @@
     <div style="background-color:black;color:lawngreen; height:25%; position:static"><center>  <img src="~/Images/deadmetal.png" class="HeaderBorder" /></center></div>
     <div class="navbar navbar-collapse" style="background-color:black; color:lawngreen">
         <div class="container">
-          
+
             <div class="navbar-nav" style="color:lawngreen">
-           
-                <ul class="nav navbar-expand" >
+
+                <ul class="nav navbar-expand">
                     <li style="margin-right:40px; font-family:Orbitron">@Html.ActionLink("Home", "Index", "Home", new { Style = "color:Green" })</li>
                     <li style="margin-right:40px; font-family:Orbitron">@Html.ActionLink("Features", "About", "Home", new { Style = "color:Green" })</li>
                     <li style="margin-right:40px; font-family:Orbitron">@Html.ActionLink("Beta", "Contact", "Home", new { Style = "color:Green" })</li>
                 </ul>
-          
+
             </div>
         </div>
     </div>
     <div style="background-color:transparent;">
         @RenderBody()
-        
-       
+
+
     </div>
 
     <div class="footer">
@@ -48,6 +52,6 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
-   
+
 </body>
 </html>
