Real Text added
Actual text and images added

--- a/DMSite/Views/Home/About.cshtml
+++ b/DMSite/Views/Home/About.cshtml
@@ -5,16 +5,17 @@
 <link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
 <center>
     <div class="divBorder">
-        <h1 style="font-family:Orbitron; color:lawngreen; margin-top:8px">Explore</h1>
-        <p style="margin-top:1%;margin-bottom:10px; float:none!important; font-family:Orbitron" class="TextBorder">Explore the universe using the ships navigation map</p>
-        <img style="font-family:Orbitron" class="ImageBorder" src="~/Images/websitemenupic.jpg" />
+        <h1 style="font-family:Orbitron; color:lawngreen; margin-top:8px">MEDIA</h1>
 
-
+        <img class="ImageBorder" src="~/Images/twootcat.png" />
+        <img class="ImageBorder"src="~/Images/CharacterCreation.jpg" />
+        <img class="ImageBorder"src="~/Images/darkback.png" />
         <img class="ImageBorder" src="~/Images/Exploring.jpg" />
-        <h1 style="font-family:Orbitron; color:lawngreen; margin-top:8px">Create</h1>
-        <p style="margin-top:1%;margin-bottom:10px; float:none!important; font-family:Orbitron" class="TextBorder">Create new robot explorers to take on the universe</p>
-        <img class="ImageBorder" src="~/Images/CharacterCreation.jpg" /><br />
+        <img class="ImageBorder" src="~/Images/testsignuppage.png" />
+        <img class="ImageBorder"src="~/Images/tweeeeet.png" />
+        <img class="ImageBorder" src="~/Images/tweetmultiplayer.png" />
+        <img class="ImageBorder" src="~/Images/websitemenupic.jpg" />
 
-        <img class="embed-responsive-item" src="~/Images/Space Pirate Shotgun shoot Left  .gif" />
+
     </div>
 </center>
