--- a/DMSite/Views/Home/Index.cshtml
+++ b/DMSite/Views/Home/Index.cshtml
@@ -8,9 +8,9 @@
 
 
         <div>
-            <div class="TextBorder" style="max-width:400px; margin-top:100px; margin-left:70px; font-family:Orbitron">
-                <h1 style="font-family:Orbitron; color:lawngreen; margin-top:8px">Create</h1>
-                Play with friends in Dead Metal's online multiplayer modes.  Play with friends in Dead Metal's online multiplayer modes.  Play with friends in Dead Metal's online multiplayer modes.  Play with friends in Dead Metal's online multiplayer modes.  Play with friends in Dead Metal's online multiplayer modes.  Play with friends in Dead Metal's online multiplayer modes.
+            <div class="TextBorder" style="max-width:400px; margin-top:100px;margin-bottom:50px; margin-left:70px; font-family:Orbitron">
+                <h1 style="font-family:Orbitron; color:lawngreen; margin-top:8px">Play With Friends</h1>
+                Play with friends in 1-4 player multiplayer!  With the timed combat system you will need to think fast and work together in order to survive!
             </div>
             <img class="ImageBorder" src="~/Images/tweetmultiplayer.png" />
         </div>
@@ -18,22 +18,22 @@
 
 
         <div>
-            <div class="TextBorder" style="max-width:400px; margin-top:100px; margin-right:70px; float:right; font-family:Orbitron">
-                <h1 style="font-family:Orbitron; color:lawngreen; margin-top:8px">Create</h1>
-                Play with friends in Dead Metal's online multiplayer modes.  Play with friends in Dead Metal's online multiplayer modes.  Play with friends in Dead Metal's online multiplayer modes.  Play with friends in Dead Metal's online multiplayer modes.  Play with friends in Dead Metal's online multiplayer modes.
+            <div class="TextBorder" style="max-width:400px; margin-top:50px;margin-bottom:100px; margin-right:70px; float:right; font-family:Orbitron">
+                <h1 style="font-family:Orbitron; color:lawngreen; margin-top:8px">Explore</h1>
+                Search through many different unique environments to learn more about the world and to find items and gear.  Almost all the levels are randomly generated with the ability to use money to tweak the levels you will be running to either increase loot or change monster difficulty.
             </div>
 
-            <img class="ImageBorder" src="~/Images/twootcat.png" />
+            <img class="ImageBorder" src="~/Images/Exploring.jpg" />
         </div>
 
 
 
         <div>
             <div class="TextBorder" style="max-width:400px; margin-top:100px; margin-left:70px; font-family:Orbitron">
-                <h1 style="font-family:Orbitron; color:lawngreen; margin-top:8px">Create</h1>
-                Play with friends in Dead Metal's online multiplayer modes.  Play with friends in Dead Metal's online multiplayer modes.  Play with friends in Dead Metal's online multiplayer modes.
+                <h1 style="font-family:Orbitron; color:lawngreen; margin-top:8px">Customize</h1>
+                Choose your base model robot to select its main weapon system.  The psy-core (or brain of the robot) can be moved from model to model to allow it to learn unique abilities for it to bring back to different models.  For instance, you could have a psy-core learn how to use a psy-staff to level 5 then switch it to a chain sword model.  If you did this then leveled the chain sword model to 5 as well you would unlock psy-slash giving the chain sword a bit of range that its not normally used to.
             </div>
-            <img class="ImageBorder" src="~/Images/tweeeeet.png" />
+            <img class="ImageBorder" src="~/Images/CharacterCreation.jpg" />
 
         </div>
     </div>
