--- a/DMSite/Views/Shared/_Layout.cshtml
+++ b/DMSite/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
 
                 <ul class="nav navbar-expand">
                     <li style="margin-right:40px; font-family:Orbitron">@Html.ActionLink("Home", "Index", "Home", new { Style = "color:Green" })</li>
-                    <li style="margin-right:40px; font-family:Orbitron">@Html.ActionLink("Features", "About", "Home", new { Style = "color:Green" })</li>
+                    <li style="margin-right:40px; font-family:Orbitron">@Html.ActionLink("Media", "About", "Home", new { Style = "color:Green" })</li>
                     <li style="margin-right:40px; font-family:Orbitron">@Html.ActionLink("Beta", "Contact", "Home", new { Style = "color:Green" })</li>
                 </ul>
 
