--- a/DMSite/Views/Shared/_LoginPartial.cshtml
+++ b/DMSite/Views/Shared/_LoginPartial.cshtml
@@ -16,7 +16,7 @@
 else
 {
     <ul class="nav navbar-nav navbar-right">
-        <li>@Html.ActionLink("Register", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>
-        <li>@Html.ActionLink("Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
+        <li style="margin-right:40px; font-family:Orbitron">@Html.ActionLink("Register", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink",  Style = "color:Green" })</li>
+        <li style="margin-right:40px; font-family:Orbitron">@Html.ActionLink("Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink", Style = "color:Green" })</li>
     </ul>
 }
