--- a/DMSite/Views/Home/DevBlog.cshtml
+++ b/DMSite/Views/Home/DevBlog.cshtml
@@ -1,6 +1,11 @@
-﻿
+﻿@using Microsoft.AspNet.Identity
+@if (Request.IsAuthenticated)
+{
+    <p>some stuff</p>
+}
+
 @{
     ViewBag.Title = "DevBlog";
 }
 
-    
+
