--- a/DMSite/Views/Shared/_Layout.cshtml
+++ b/DMSite/Views/Shared/_Layout.cshtml
@@ -28,6 +28,7 @@
                     <li style="margin-right:40px; font-family:Orbitron">@Html.ActionLink("Home", "Index", "Home", new { Style = "color:Green" })</li>
                     <li style="margin-right:40px; font-family:Orbitron">@Html.ActionLink("Media", "About", "Home", new { Style = "color:Green" })</li>
                     <li style="margin-right:40px; font-family:Orbitron">@Html.ActionLink("Beta", "Contact", "Home", new { Style = "color:Green" })</li>
+                    <li style="margin-right:40px; font-family:Orbitron">@Html.ActionLink("DevBlog", "DevBlog", "Home", new { Style = "color:Green" })</li>
                 </ul>
              
             </div>
